--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -83,6 +83,7 @@ login.doc=документация
 password.password=Пароль :
 password.confirm=Подтвердить :
 exception.error_data=Ошибка проверки данных
+exception.user.updateRestriction=Изменение Admin/User запрещено
 
 error.appError=Ошибка приложения
 error.dataNotFound=Данные не найдены
