--- a/config/messages/app_uk.properties
+++ b/config/messages/app_uk.properties
@@ -84,12 +84,13 @@ login.doc=документація
 password.password=Пароль:
 password.confirm=Підтвердити:
 exception.error_data=Помилка перевірки даних
+exception.user.updateRestriction=Вносити зміну в Admin/User заборонено
 
 error.appError=Помилка застосунка
 error.dataNotFound=Дані не знайдені
 error.dataError=Помилка в даних
 error.validationError=Помилка перевірки даних
-error.wrongRequest=Невірний запит
+error.wrongRequest=Не правильний запит
 
 NotEmpty=[{0}] не повинно бути пустим
 NotBlank=[{0}] не повинно бути пустим
